# shopping_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  test_rag_service.py
agents/: Dockerfile  pyproject.toml  requirements.txt  setup_db.py  test_integration.py
agents/app/: config.py  main.py
agents/app/agents/: specialized.py  workflows.py
agents/app/api/: chat.py  health.py
agents/app/graph/: id_mapper.py  state.py  supervisor.py  tools.py
agents/app/memory/: pg_user_store.py  redis_store.py
agents/app/observability/: tracing.py
agents/app/rag/: __init__.py  opensearch_store.py  pgvector_store.py  pipeline.py  policy_rag.py  product_rag.py  qdrant_store.py  review_rag.py
agents/app/tools/: kafka_client.py  service_clients.py
agents/tests/: test_tools.py
gateway/: Dockerfile  nginx.conf
infra/kafka/: create-topics.sh
infra/otel/: otel-collector.yml
libs/contracts/events/: envelope.schema.json  inventory.v1.schema.json  order.v1.schema.json  payment.v1.schema.json
rag-service/: Dockerfile  requirements.txt
rag-service/app/: config.py  main.py
rag-service/tests/: conftest.py  test_rag_router.py
services/gateway-service/: .factorypath  Dockerfile  build.gradle
services/inventory-service/: Dockerfile  build.gradle
services/order-service/: Dockerfile  build.gradle
services/payment-service/: Dockerfile  build.gradle
services/product-service/: Dockerfile  build.gradle
services/review-service/: Dockerfile  build.gradle
tools/seed/: seed_laptop_reviews.py  seed_laptop_reviews_all.py  seed_products_rag.py  seed_rag.py
(+220 files in other folders)
